// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`speechRate renders 0 1`] = `
Array [
  .c0 {
  speech-rate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders function 1`] = `
Array [
  .c0 {
  speech-rate: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: has;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: has;
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders invalid theme path 1`] = `
Array [
  .c0 {
  speech-rate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders negative number 1`] = `
Array [
  .c0 {
  speech-rate: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  speech-rate: July;
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: July;
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    speech-rate: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    speech-rate: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speech-rate: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speech-rate: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  speech-rate: July;
}

@media May {
  .c0 {
    speech-rate: August;
  }
}

@media April {
  .c0 {
    speech-rate: September;
  }
}

@media January {
  .c0 {
    speech-rate: November;
  }
}

@media April {
  .c0 {
    speech-rate: August;
  }
}

@media June {
  .c0 {
    speech-rate: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: July;
}

@media May {
  .c0 {
    speech-rate: August;
  }
}

@media April {
  .c0 {
    speech-rate: September;
  }
}

@media January {
  .c0 {
    speech-rate: November;
  }
}

@media April {
  .c0 {
    speech-rate: August;
  }
}

@media June {
  .c0 {
    speech-rate: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speech-rate: November;
  }
}

@media April {
  .c0 {
    speech-rate: January;
  }
}

@media January {
  .c0 {
    speech-rate: December;
  }
}

@media April {
  .c0 {
    speech-rate: April;
  }
}

@media June {
  .c0 {
    speech-rate: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speech-rate: November;
  }
}

@media April {
  .c0 {
    speech-rate: January;
  }
}

@media January {
  .c0 {
    speech-rate: December;
  }
}

@media April {
  .c0 {
    speech-rate: April;
  }
}

@media June {
  .c0 {
    speech-rate: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    speech-rate: July;
  }
}

@media April {
  .c0 {
    speech-rate: August;
  }
}

@media January {
  .c0 {
    speech-rate: September;
  }
}

@media April {
  .c0 {
    speech-rate: November;
  }
}

@media June {
  .c0 {
    speech-rate: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    speech-rate: July;
  }
}

@media April {
  .c0 {
    speech-rate: August;
  }
}

@media January {
  .c0 {
    speech-rate: September;
  }
}

@media April {
  .c0 {
    speech-rate: November;
  }
}

@media June {
  .c0 {
    speech-rate: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speech-rate: January;
  }
}

@media April {
  .c0 {
    speech-rate: December;
  }
}

@media January {
  .c0 {
    speech-rate: April;
  }
}

@media April {
  .c0 {
    speech-rate: May;
  }
}

@media June {
  .c0 {
    speech-rate: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speech-rate: January;
  }
}

@media April {
  .c0 {
    speech-rate: December;
  }
}

@media January {
  .c0 {
    speech-rate: April;
  }
}

@media April {
  .c0 {
    speech-rate: May;
  }
}

@media June {
  .c0 {
    speech-rate: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders postitive number 1`] = `
Array [
  .c0 {
  speech-rate: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders string 1`] = `
Array [
  .c0 {
  speech-rate: July;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: July;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: June;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: June;
}

<div
    className="c0"
  />,
]
`;

exports[`speechRate renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`speechRate renders valid theme path 1`] = `
Array [
  .c0 {
  speech-rate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speech-rate: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
